syntax = "proto3";

package taskmanager.pb;
import "Verification.proto";
import "Task.proto";
option go_package = "github.com/DiarmuidMalanaphy/Task-Manager/standards";

message AddTaskRequest {
	VerificationToken token = 1;
	Task newtask = 2;
}

